updated json file

--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
   "name": "lifequest",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "A task manager and tracker that awards xp and points when an individual completes tasks, motivate yourself and climb through levels and the leaderboards to productivity!",
   "main": "server.js",
-  "dependencies": {},
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
+    "method-override": "^2.3.6",
+    "mysql": "^2.11.1",
+    "path": "^0.12.7"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "richard, todd, sal, tom",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/salszu/goalKeeper.git"
+  },
+  "keywords": [
+    "lifequest",
+    "goalkeeper"
+  ],
+  "bugs": {
+    "url": "https://github.com/salszu/goalKeeper/issues"
+  },
+  "homepage": "https://github.com/salszu/goalKeeper#readme"
 }
